src/tests/snapshots/scl__tests__runtime@size_of.scl-3.snap
---
source: src/tests/mod.rs
expression: stderr
input_file: src/tests/sources/runtime/size_of.scl
---

