src/tests/snapshots/scl__tests__runtime@size_of.scl.snap
---
source: src/tests/mod.rs
expression: checked_main_package
input_file: src/tests/sources/runtime/size_of.scl
---
CheckedPackage {
    package_id: ModuleId(
        3,
    ),
    units: [
        CheckedTranslationUnit {
            procs: [
                CheckedProc {
                    proc_id: ProcId(
                        3,
                    ),
                    body: CheckedBlock {
                        stmts: [
                            Expr(
                                CheckedExpr {
                                    type_id: TypeId(
                                        3,
                                    ),
                                    lvalue: true,
                                    kind: DirectCall {
                                        proc_id: ProcId(
                                            1,
                                        ),
                                        params: [
                                            CheckedExpr {
                                                type_id: TypeId(
                                                    4,
                                                ),
                                                lvalue: false,
                                                kind: String(
                                                    "@size_of::<u32>() = %d\\n",
                                                ),
                                            },
                                            CheckedExpr {
                                                type_id: TypeId(
                                                    3,
                                                ),
                                                lvalue: false,
                                                kind: Number(
                                                    4,
                                                ),
                                            },
                                        ],
                                        variadic_after: Some(
                                            1,
                                        ),
                                        stack_slot: StackSlotId(
                                            0,
                                        ),
                                    },
                                },
                            ),
                            Expr(
                                CheckedExpr {
                                    type_id: TypeId(
                                        3,
                                    ),
                                    lvalue: true,
                                    kind: DirectCall {
                                        proc_id: ProcId(
                                            1,
                                        ),
                                        params: [
                                            CheckedExpr {
                                                type_id: TypeId(
                                                    4,
                                                ),
                                                lvalue: false,
                                                kind: String(
                                                    "@size_of::<S>() = %d\\n",
                                                ),
                                            },
                                            CheckedExpr {
                                                type_id: TypeId(
                                                    3,
                                                ),
                                                lvalue: false,
                                                kind: Number(
                                                    16,
                                                ),
                                            },
                                        ],
                                        variadic_after: Some(
                                            1,
                                        ),
                                        stack_slot: StackSlotId(
                                            1,
                                        ),
                                    },
                                },
                            ),
                        ],
                        last: Some(
                            CheckedExpr {
                                type_id: TypeId(
                                    2,
                                ),
                                lvalue: false,
                                kind: Number(
                                    0,
                                ),
                            },
                        ),
                        type_id: TypeId(
                            2,
                        ),
                    },
                    params: [],
                    return_type: TypeId(
                        2,
                    ),
                    stack_slots: StackSlots {
                        slots: [
                            TypeId(
                                3,
                            ),
                            TypeId(
                                3,
                            ),
                        ],
                    },
                },
            ],
        },
    ],
}
